--- a/src/PrestaShopBundle/Resources/config/services/adapter/product.yml
+++ b/src/PrestaShopBundle/Resources/config/services/adapter/product.yml
@@ -269,7 +269,7 @@ services:
       - '@PrestaShop\PrestaShop\Adapter\Product\Pack\Update\ProductPackUpdater'
       - '@PrestaShop\PrestaShop\Adapter\Product\Combination\Update\CombinationDeleter'
       - '@prestashop.adapter.product.virtual_product.update.virtual_product_updater'
-      - '@prestashop.adapter.product.stock.update.product_stock_updater'
+      - '@PrestaShop\PrestaShop\Adapter\Product\Stock\Update\ProductStockUpdater'
       - '@PrestaShop\PrestaShop\Adapter\Product\Pack\Repository\ProductPackRepository'
 
   PrestaShop\PrestaShop\Adapter\Product\CommandHandler\DeleteProductHandler:
@@ -433,7 +433,7 @@ services:
       - '@PrestaShop\PrestaShop\Adapter\Product\Stock\Repository\StockAvailableMultiShopRepository'
       - '@prestashop.adapter.shop.repository.shop_repository'
       - '@PrestaShop\PrestaShop\Adapter\Product\Image\Repository\ProductImageMultiShopRepository'
-      - '@prestashop.adapter.product.stock.update.product_stock_updater'
+      - '@PrestaShop\PrestaShop\Adapter\Product\Stock\Update\ProductStockUpdater'
       - '@PrestaShop\PrestaShop\Adapter\Product\Combination\Repository\CombinationRepository'
       - '@PrestaShop\PrestaShop\Adapter\Product\Combination\Update\CombinationStockUpdater'
       - '@PrestaShop\PrestaShop\Adapter\Product\Combination\Update\DefaultCombinationUpdater'
@@ -449,7 +449,7 @@ services:
 
   PrestaShop\PrestaShop\Adapter\Product\Stock\CommandHandler\UpdateProductStockAvailableHandler:
     arguments:
-      - '@prestashop.adapter.product.stock.update.product_stock_updater'
+      - '@PrestaShop\PrestaShop\Adapter\Product\Stock\Update\ProductStockUpdater'
       - '@PrestaShop\PrestaShop\Adapter\Product\Repository\ProductMultiShopRepository'
       - '@PrestaShop\PrestaShop\Adapter\Product\Combination\Repository\CombinationRepository'
     tags:
