use shopId in route url for deletion to determine shop or all shops

--- a/src/PrestaShopBundle/Resources/config/routing/admin/sell/catalog/product_v2/combination.yml
+++ b/src/PrestaShopBundle/Resources/config/routing/admin/sell/catalog/product_v2/combination.yml
@@ -60,26 +60,30 @@ admin_products_combinations_bulk_edit_combination:
     productId: \d+
 
 admin_products_combinations_delete_combination:
-  path: /combinations/{combinationId}/delete
+  path: /combinations/{combinationId}/delete/{shopId}
   methods: [ DELETE ]
   options:
     expose: true
   defaults:
     _controller: PrestaShopBundle\Controller\Admin\Sell\Catalog\Product\CombinationController::deleteAction
     _legacy_controller: AdminProducts
+    shopId: null
   requirements:
     combinationId: \d+
+    shopId: \d+
 
 admin_products_combinations_bulk_delete:
-  path: /{productId}/combinations/bulk-delete
+  path: /{productId}/combinations/bulk-delete/{shopId}
   methods: [ POST ]
   options:
     expose: true
   defaults:
     _controller: PrestaShopBundle\Controller\Admin\Sell\Catalog\Product\CombinationController::bulkDeleteAction
     _legacy_controller: AdminProducts
+    shopId: null
   requirements:
     productId: \d+
+    shopId: \d+
 
 admin_products_attribute_groups:
   path: /{productId}/attribute-groups
