--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,8 @@
 blank_issues_enabled: false
 contact_links:
-  - name: I need help
+  - name: 🚀 Idea / Feature request
+    url: https://github.com/PrestaShop/PrestaShop/discussions/new?category=ideas
+    about: Suggest an idea to improve PrestaShop
+  - name: 🙏 I need help
     url: https://www.prestashop-project.org/support/
     about: If you have questions or need help
