--- a/src/PrestaShopBundle/Resources/config/services/adapter/data_configuration.yml
+++ b/src/PrestaShopBundle/Resources/config/services/adapter/data_configuration.yml
@@ -118,6 +118,10 @@ services:
       - '@translator'
       - '@prestashop.adapter.validate'
 
+  PrestaShop\PrestaShop\Adapter\Configuration\ContactOptionsConfiguration:
+    arguments:
+      - '@prestashop.adapter.legacy.configuration'
+
   prestashop.adapter.order.delivery.slip.options.configuration:
     class: 'PrestaShop\PrestaShop\Adapter\Order\Delivery\SlipOptionsConfiguration'
     arguments:
