--- a/src/PrestaShopBundle/Resources/config/services/adapter/kpi.yml
+++ b/src/PrestaShopBundle/Resources/config/services/adapter/kpi.yml
@@ -100,9 +100,15 @@ services:
     class: 'PrestaShop\PrestaShop\Adapter\Kpi\NetProfitPerVisitKpi'
 
   PrestaShop\PrestaShop\Adapter\Kpi\AverageResponseTimeKpi:
+    arguments:
+      - '@translator'
 
   prestashop.adapter.kpi.messages_per_thread:
     class: 'PrestaShop\PrestaShop\Adapter\Kpi\MessagesPerThreadKpi'
+    arguments:
+      - '@translator'
 
   prestashop.adapter.kpi.pending_discussion_threads:
     class: 'PrestaShop\PrestaShop\Adapter\Kpi\PendingDiscussionThreadsKpi'
+    arguments:
+      - '@translator'
