--- a/src/PrestaShopBundle/Resources/config/services/bundle/form/form_data_provider.yml
+++ b/src/PrestaShopBundle/Resources/config/services/bundle/form/form_data_provider.yml
@@ -128,6 +128,9 @@ services:
     arguments:
       - '@prestashop.adapter.logs.configuration'
 
+  PrestaShopBundle\Form\Admin\CustomerService\CustomerThread\ContactOptionsFormDataProvider:
+    autowire: true
+
   prestashop.admin.import.form_data_provider:
     class: 'PrestaShopBundle\Form\Admin\Configure\AdvancedParameters\Import\ImportFormDataProvider'
     arguments:
