--- a/src/PrestaShopBundle/Resources/config/services/bundle/form/form_handler.yml
+++ b/src/PrestaShopBundle/Resources/config/services/bundle/form/form_handler.yml
@@ -570,3 +570,12 @@ services:
       - 'PrestaShopBundle\Form\Admin\Configure\AdvancedParameters\Security\PasswordPolicyType'
       - 'SecurityPagePasswordPolicy'
       - 'password_policy'
+
+  prestashop.adapter.customer_service.contact_options.form_handler:
+    class: 'PrestaShop\PrestaShop\Core\Form\Handler'
+    arguments:
+      - '@form.factory'
+      - '@prestashop.core.hook.dispatcher'
+      - '@PrestaShopBundle\Form\Admin\CustomerService\CustomerThread\ContactOptionsFormDataProvider'
+      - 'PrestaShopBundle\Form\Admin\CustomerService\CustomerThread\ContactOptionType'
+      - 'contact_options'
