Turn service definitions into FQCN style for services in adapter/product/attribute.yml and attribute_group.yml

--- a/src/PrestaShopBundle/Resources/config/services/adapter/common.yml
+++ b/src/PrestaShopBundle/Resources/config/services/adapter/common.yml
@@ -2,8 +2,11 @@ services:
   _defaults:
     public: true
 
+  PrestaShop\PrestaShop\Adapter\Configuration: ~
+
   prestashop.adapter.legacy.configuration:
-    class: PrestaShop\PrestaShop\Adapter\Configuration
+    alias: PrestaShop\PrestaShop\Adapter\Configuration
+    deprecated: ~
 
   prestashop.adapter.tools:
     class: PrestaShop\PrestaShop\Adapter\Tools
