--- a/src/PrestaShopBundle/Resources/config/services/bundle/repository.yml
+++ b/src/PrestaShopBundle/Resources/config/services/bundle/repository.yml
@@ -129,11 +129,14 @@ services:
       - "@doctrine.dbal.default_connection"
       - "%database_prefix%"
 
-  prestashop.core.admin.attribute_group.repository:
-    class: PrestaShopBundle\Entity\Repository\AttributeGroupRepository
+  PrestaShopBundle\Entity\Repository\AttributeGroupRepository:
     factory: [ '@doctrine.orm.default_entity_manager', getRepository ]
     arguments:
       - PrestaShopBundle\Entity\AttributeGroup
+
+  prestashop.core.admin.attribute_group.repository:
+    alias: PrestaShopBundle\Entity\Repository\AttributeGroupRepository
+    deprecated: ~
 
   prestashop.core.admin.feature_flag.repository:
     class: PrestaShopBundle\Entity\Repository\FeatureFlagRepository
