--- a/src/PrestaShopBundle/Resources/config/services/adapter/form.yml
+++ b/src/PrestaShopBundle/Resources/config/services/adapter/form.yml
@@ -71,14 +71,14 @@ services:
   prestashop.adapter.form.choice_provider.features_choice_provider:
     class: 'PrestaShop\PrestaShop\Adapter\Form\ChoiceProvider\FeaturesChoiceProvider'
     arguments:
-      - '@prestashop.adapter.feature.repository.feature_repository'
+      - '@PrestaShop\PrestaShop\Adapter\Feature\Repository\FeatureRepository'
       - '@prestashop.adapter.legacy.context'
       - "@=service('prestashop.adapter.legacy.configuration').getInt('PS_LANG_DEFAULT')"
 
   prestashop.adapter.form.choice_provider.feature_values_choice_provider:
     class: 'PrestaShop\PrestaShop\Adapter\Form\ChoiceProvider\FeatureValuesChoiceProvider'
     arguments:
-      - '@prestashop.adapter.feature.repository.feature_value_repository'
+      - '@PrestaShop\PrestaShop\Adapter\Feature\Repository\FeatureValueRepository'
       - '@prestashop.adapter.legacy.context'
       - "@=service('prestashop.adapter.legacy.configuration').getInt('PS_LANG_DEFAULT')"
 
